components/component-127/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: my-big-application
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: component-127
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elcomponent-127
  namespace: scott
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-component-127
    weight: null
status: {}
